--- a/faq.html
+++ b/faq.html
@@ -98,12 +98,64 @@
             </div>
         </div>
     </section>
-    <div class="text-dark text-center" id="MAM">
+    <div class="text-dark text-center">
         <h2 class="p-5">I AM READY TO TRY ZHI YU</h2>
           <button class=" btn bg-primary-1 p-4 text-light" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
           <div class="call info p-5">YOU CAN ALSO CALL:12345678 </div>
         </div>
     
+      </div>
+      <div id="accordion" class="container P-4 mb-4">
+        <div class="card  bg-gradient">
+          <div class="card-header">
+            <h5 class="mb-0">
+              <button class="btn btn-link text-light" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Collapsible Group Item #1
+              </button>
+            </h5>
+          </div>
+      
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion" >
+            <div class="card-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. 
+              Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. 
+              Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. 
+              Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gradient">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Collapsible Group Item #2
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+            <div class="card-body text-light">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. 
+              Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. 
+              Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
+        <div class="card bg-gradient" class="mb-4">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-">
+              <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Collapsible Group Item #3
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. 
+              Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. 
+              Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            </div>
+          </div>
+        </div>
       </div>
 
 
@@ -111,17 +163,31 @@
     <footer id="main-footer" class="bg-gradient">
       <div class="container">
         <div class="row">
-         <div class="col-md-4"></div>
-           <div class="text-center py-4 col-md-4">
-
-            <h3> ZHI YU HEALTH CARE</h3>
-            <P>Copyright &copy; <span id="year"></span></P>
-            <button type="button" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+        <div class="col-md-4 text-center p-5 ">
+            <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+              "Your personal Nutritionist"
+            </p>
           </div>
-          <div class="col-md-4"></div>
-
+          <div class="col-md-7 p-5">
+            <div class="row">
+              <div class="col-md-4">
+                <ul>
+                  <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                  <li><a href="faq.html" class="text-light">FAQ</a></li>
+                  <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <li class="">+8615579101089</li>
+                  <li class="">Nanchang(JIANGXI)</li>
+                  <li class="">University of technology</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-     </div>
+      </div>
     </footer>
 
     <!-- CONTACT MODAL -->
