--- a/Blog.html
+++ b/Blog.html
@@ -102,22 +102,35 @@
     </div>
     </div>
     <!-- FOOTER -->
-  <footer id="why_zhiyu.html" class="bg-gradient">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="text-center py-4 col-md-4">
-
-          <h3>HEALTH CARE</h3>
-          <P>Copyright &copy; <span id="year"></span></P>
-          <button class="btn btn-white" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+    <footer id="main-footer" class="bg-gradient">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-4 text-center p-5 ">
+            <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+              "Your personal Nutritionist"
+            </p>
+          </div>
+          <div class="col-md-7 p-5">
+            <div class="row">
+              <div class="col-md-4">
+                <ul>
+                  <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                  <li><a href="faq.html" class="text-light">FAQ</a></li>
+                  <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <li class="">+8615579101089</li>
+                  <li class="">Nanchang(JIANGXI)</li>
+                  <li class="">University of technology</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4"></div>
-
       </div>
-    </div>
-  </footer>
-  
+    </footer>
     <!-- CONTACT MODAL -->
     <div class="modal fade text-light"id="contact_modal">
       <div class="modal-dialog" role="document">
