--- a/faq.html
+++ b/faq.html
@@ -128,7 +128,7 @@
           <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
               <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Collapsible Group Item #2
+                healthy meal
               </button>
             </h5>
           </div>
