--- a/faq.html
+++ b/faq.html
@@ -110,7 +110,7 @@
           <div class="card-header">
             <h5 class="mb-0">
               <button class="btn btn-link text-light" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Collapsible Group Item #1
+                healthy guide
               </button>
             </h5>
           </div>
@@ -144,7 +144,7 @@
           <div class="card-header" id="headingThree">
             <h5 class="mb-">
               <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Collapsible Group Item #3
+                Nutritions
               </button>
             </h5>
           </div>
