--- a/faq.html
+++ b/faq.html
@@ -110,7 +110,7 @@
           <div class="card-header">
             <h5 class="mb-0">
               <button class="btn btn-link text-light" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                healthy guide
+                Mision
               </button>
             </h5>
           </div>
@@ -128,7 +128,7 @@
           <div class="card-header" id="headingTwo">
             <h5 class="mb-0">
               <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                healthy meal
+                Vision
               </button>
             </h5>
           </div>
@@ -144,7 +144,7 @@
           <div class="card-header" id="headingThree">
             <h5 class="mb-">
               <button class="btn btn-link collapsed text-light" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Nutritions
+                Values and Principals
               </button>
             </h5>
           </div>
