--- a/faq.html
+++ b/faq.html
@@ -110,7 +110,7 @@
           <div class="card-header">
             <h5 class="mb-0">
               <button class="btn btn-link text-light" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Mision
+                Mission
               </button>
             </h5>
           </div>
