about us updated

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
               <a href="blog-detail.html" class="nav-link">Blog Detail</a>
           </li>
+          <li class="nav-item">
+            <a href="about-us.html" class="nav-link">About Us</a>
+        </li>
         </ui>
       </div>
     </div>
