--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             
           <li class="nav-item">
             <a href="blog-detail.html" class="nav-link">Blog Detail</a>
+
+            <li class="nav-item">
+              <a href="about-us.html" class="nav-link">About Us</a>
+          </li>
         </ui>
       </div>
     </div>
@@ -87,7 +91,7 @@
             </div>
         </div>
         <div class="col-md-6">
-          <img src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
+          <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
 
       </div>
     </div>
