--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a href="blog-detail.html" class="nav-link">Blog Detail</a>
                     </li>
+                    <li class="nav-item">
+                      <a href="about-us.html" class="nav-link">About Us</a>
+                  </li>
                 </ui>
             </div>
             </button>
