about us updated

--- a/blog-detail.html
+++ b/blog-detail.html
@@ -61,7 +61,7 @@
           src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
           alt="healthy.meal-3" class="w-75 img-fluid mb-3 rounded-circle shadow p-3 mb-5"> 
           <div class="row" id="#purple">
-            <div class="col-md- pt-5 ">
+            <div class=" pt-5 ">
               <h3>Three Easy Ways to Eat Better</h3>
               </div>
             <div class="">
