--- a/About-us.HTML
+++ b/About-us.HTML
@@ -51,7 +51,7 @@
   <div class="container">
     <div class="row pt-5 pb-5">
     <div class="col-md-8">  
-       <section class="entry-content text-dark pl-5 pt-5" itemprop="articleBody">
+       <section class="entry-content text-dark pt-" itemprop="articleBody">
        <h2>Our Vision</h2>
        <p><strong><em>A Culture of Aging that is Life-Affirming, Satisfying, Humane and Meaningful</em></strong></p>
       <p>Pioneer Network supports models where elders live in open, diverse, caring communities. In-depth change in systems requires change in governmental policy and regulation; change in the individual’s and society’s attitudes toward aging and elders; change in elders’ attitudes towards themselves and their aging; and change in the attitudes and behavior of caregivers toward those for whom they care. We refer to this work as culture change. Our aim is nothing less than transforming the culture of aging in America.</p>
