--- a/brain-health.html
+++ b/brain-health.html
@@ -40,6 +40,10 @@
             
           <li class="nav-item">
             <a href="blog-detail.html" class="nav-link">Blog Detail</a>
+            
+            <li class="nav-item">
+              <a href="about-us.html" class="nav-link">About Us</a>
+          </li>
         </ui>
       </div>
     </div>
