--- a/intermittent-fasting.html
+++ b/intermittent-fasting.html
@@ -40,6 +40,10 @@
             
           <li class="nav-item">
             <a href="blog-detail.html" class="nav-link">Blog Detail</a>
+
+            <li class="nav-item">
+              <a href="about-us.html" class="nav-link">About Us</a>
+          </li>
         </ui>
       </div>
     </div>
@@ -97,19 +101,33 @@
 
     <!-- FOOTER -->
     <footer id="main-footer" class="bg-gradient">
-        <div class="container">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-4 text-center p-5 ">
+            <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+              "Your personal Nutritionist"
+            </p>
+          </div>
+          <div class="col-md-7 p-5">
             <div class="row">
-                <div class="col-md-4"></div>
-                <div class="text-center py-4 col-md-4">
-
-                    <h3> ZHI YU HEALTH CARE</h3>
-                    <P>Copyright &copy; <span id="year"></span></P>
-                    <button class="btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
-                </div>
-                <div class="col-md-4"></div>
-
+              <div class="col-md-4">
+                <ul>
+                  <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                  <li><a href="faq.html" class="text-light">FAQ</a></li>
+                  <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <li class="">+8615579101089</li>
+                  <li class="">Nanchang(JIANGXI)</li>
+                  <li class="">University of technology</li>
+                </ul>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <!-- CONTACT MODAL -->
