--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <i class="fas fa-check fa-2x"></i>
             </div>
             <div class="p-4 align-self-end">
-              We deliver to Guanzhu. Nanchang, Shanghia,Hong kong and , Westchester
+              We deliver to Guanzhu. Nanchang, Shanghia, Hong kong
               County, Greenwich CT.
             </div>
           </div>
