--- a/inflammation.html
+++ b/inflammation.html
@@ -67,10 +67,10 @@
           src="https://images.unsplash.com/photo-1591120583691-49d2741e55da?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGZvb2RzJTIwdGhhdCUyMHdvbid0JTIwY2F1c2UlMjBpbmZsYW1tYXRpb258ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
           alt="healthy.meal-3" class="w-75 img-fluid mb-3 rounded-circle shadow p-3 mb-5"> 
           <div class="row" id="#purple">
-            <div class="col-md- pt-5 ">
+            <div class=" pt-5 ">
               <h3>TURMERIC</h3>
               </div>
-            <div class="col-md- ">
+            <div class="">
               <p>Turmeric is said to reduce inflammation related to diseases like arthritis and diabetes. It has a nutrient in it called curcumin. 
                 Curcumin has anti-inflammatory effects and is a powerful antioxidant. Turmeric itself is a common spice used in Indian dishes like curry. 
                 If you’re an adventurous cook, the benefits of turmeric should give you a good excuse to venture into Indian cuisine. </p>
@@ -79,7 +79,19 @@
                 src="https://media.istockphoto.com/id/1135096233/photo/turmeric-roots-and-powder-shot-from-above.jpg?b=1&s=170667a&w=0&k=20&c=2iiWp2W3vq7SY7EIdw8sLwIsrV_lQWt39VM3m1V11Uk="
                 class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
                 alt="How to Select, Store and Use Sweet Potatoes"> 
-          </div>
+
+        </div>
+      </div>
+      <div class="col-md-4 pl-5">
+        <h2>Recent Posts</h2>
+        <ul class="list-group">
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
+          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
+          <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
+        </ul>
+
       </div>
     </div>
   </div>
