--- a/brain-health.html
+++ b/brain-health.html
@@ -76,6 +76,17 @@
                 alt="How to Select, Store and Use Sweet Potatoes">
 
           </div>
+      </div>
+      <div class="col-md-4 pl-5">
+        <h2>Recent Posts</h2>
+        <ul class="list-group">
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
+          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
+          <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
+        </ul>
+
       </div>                    
     </div>            
   </div>
