--- a/med'iterranean-diet.html
+++ b/med'iterranean-diet.html
@@ -50,9 +50,9 @@
   </nav>
   <div class="container">
     <div class="row pt-5 pb-5 text-dark">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-">
             <h1>Why the Mediterranean-diet?</h1>
             <P>Dieting fads come and go. But that’s the thing is, they’re just fad. Not necessarily fit to stick around
               long
@@ -80,25 +80,16 @@
               regular
               exercise. No heavy weight lifting, more so average cardio. It also requires some picky eating.</P>
           </div>
-          <div class="col-md-6">
-            <img
-              src="https://images.unsplash.com/photo-1482049016688-2d3e1b311543?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=410&q=80"
-              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
+          <div class="">
           </div>
         </div>
 
 
         <div class=container>
-          <div class="row" id="#purple">
-            <div class="col-md-12">
+          <div class="" id="#purple">
+            <div class="col-md-">
               <div class="row">
-                <div class="col-md-6">
-                  <img
-                    src="https://images.unsplash.com/photo-1493770348161-369560ae357d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-                    class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
-                    alt="How to Select, Store and Use Sweet Potatoes">
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
                   <h3>Why the Mediterranean Diet?</h3>
                   <p>Foods with these ingredients should be avoided right away
   
@@ -119,6 +110,22 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4 pl-5">
+        <h2>Recent Posts</h2>
+        <ul class="list-group">
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
+          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
+          <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
+        </ul>
+        <div class="col-md- pt-5 sweet-potato">
+          <img
+            src="https://images.unsplash.com/photo-1493770348161-369560ae357d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+            class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
+            alt="Sweet Potatoes">
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -129,15 +136,29 @@
     <footer id="main-footer" class="bg-gradient">
       <div class="container">
         <div class="row">
-          <div class="col-md-4"></div>
-          <div class="text-center py-4 col-md-4">
-
-            <h3>HEALTH CARE</h3>
-            <P>Copyright &copy; <span id="year"></span></P>
-            <button class="btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+        <div class="col-md-4 text-center p-5 ">
+            <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+              "Your personal Nutritionist"
+            </p>
           </div>
-          <div class="col-md-4"></div>
-
+          <div class="col-md-7 p-5">
+            <div class="row">
+              <div class="col-md-4">
+                <ul>
+                  <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                  <li><a href="faq.html" class="text-light">FAQ</a></li>
+                  <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul>
+                  <li class="">+8615579101089</li>
+                  <li class="">Nanchang(JIANGXI)</li>
+                  <li class="">University of technology</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
