--- a/intermittent-fasting.html
+++ b/intermittent-fasting.html
@@ -88,13 +88,9 @@
                 But in all reality, this is a great diet for losing weight healthily. It just requires a lot of self-control. 
                 If this diet doesn’t sound like a fit for you, check out our article on the Mediterranean diet. It may be a better fit for you, especially if you’re a fish-lover. 
                 And if you struggle to eat healthily, or just aren’t a fan of meal prep, don’t forget we make and deliver meals and snacks tailored to fit individual dietary needs. </p>
-              </div>
-              <img
-                src="https://images.unsplash.com/photo-1554998171-89445e31c52b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
-                alt="How to Select, Store and Use Sweet Potatoes"> 
-         </div>
-      </div>
+              </div> 
+        </div>
+    </div>
       <div class="col-md-4 pl-5">
         <h2>Recent Posts</h2>
         <ul class="list-group">
@@ -104,7 +100,11 @@
           <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
           <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
         </ul>
-
+        <div class=" pt-5 sweet-potato">
+        <img
+        src="https://images.unsplash.com/photo-1554998171-89445e31c52b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5 width-"
+        alt="How to Select, Store and Use Sweet Potatoes">
       </div>
     </div>
 </div>
@@ -193,7 +193,7 @@
 
     // init Scrollspy
     $('body').scrollspy({ target: 'main-nav'});
-</script>
-</body>
+ </script>
+ </body>
 
-</html>
+ </html>
