--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a href="about-us.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Blog Detail</a>
+            <a href="contact.html" class="nav-link">Contact Us</a>
         </li>
         </ui>
       </div>
