--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -45,6 +45,9 @@
                     <li class="nav-item">
                       <a href="about-us.html" class="nav-link">About Us</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="contact.html" class="nav-link">contact us</a>
+                </li>
                 </ui>
             </div>
             </button>
