--- a/service_area.html
+++ b/service_area.html
@@ -43,6 +43,9 @@
           <li class="nav-item">
             <a href="about-us.html" class="nav-link">About Us</a>
         </li>
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link">Contact Us</a>
+      </li>
         </ui>
       </div>
       </button>
