--- a/contact.html
+++ b/contact.html
@@ -51,3 +51,26 @@
             </button>
         </div>
     </nav>
+
+    
+     <div class="container text-dark pt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <h6>Contact Us</h6>
+                 <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+            </div>
+        </div>
+     </div>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+ 
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
