--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -46,7 +46,7 @@
                       <a href="about-us.html" class="nav-link">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="contact.html" class="nav-link">contact us</a>
+                    <a href="contact.html" class="nav-link">Contact Us</a>
                 </li>
                 </ui>
             </div>
