--- a/contact.html
+++ b/contact.html
@@ -55,17 +55,17 @@
         <div class="row pt-5 text-dark">
 
             <div class="col-md-4 info-box">
-                <div class="location">location</div>semen mazgaja
+                <h1 >location</h1>semen mazgaja
                 <p>danu mall first floor </p>
             </div>
             
             <div class="col-md-4 info-box">
-                <div class="location">Call Us</div>
+                <div >Call Us</div>
                 <p>2519123456</p>
             </div>
             
             <div class="col-md-4 info-box">
-                <div class="location">Visit Us</div>
+                <div >Visit Us</div>
                 <p>Mon-Sat </p>
             </div>
         </div>
@@ -120,3 +120,89 @@
 
         </form>
     </div>
+
+    <!-- FOOTER -->
+  <footer id="main-footer" class="bg-gradient">
+    <div class="container">
+      <div class="row">
+      <div class="col-md-4 text-center p-5 ">
+          <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+            "Your personal Nutritionist"
+          </p>
+        </div>
+        <div class="col-md-7 p-5">
+          <div class="row">
+            <div class="col-md-4">
+              <ul>
+                <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                <li><a href="faq.html" class="text-light">FAQ</a></li>
+                <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <ul>
+                <li class="">+8615579101089</li>
+                <li class="">Nanchang(JIANGXI)</li>
+                <li class="">University of technology</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- CONTACT MODAL -->
+  <div class="modal fade text-light"  id="contact_modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-green">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body bg-green">
+          <div class="row"> 
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer bg-green">
+          <button type="button" class="btn btn">Save changes</button>
+          <button type="button" class="btn btn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>
+    // Get the current year for the copyright
+    $('#year').text(new Date().getfullyear());
+
+    // init Scrollspy
+    $('body').scrollspy({ target: 'main-nav'});
+</script>
+</body>
+
+</html>
