--- a/contact.html
+++ b/contact.html
@@ -60,12 +60,12 @@
             </div>
             
             <div class="col-md-4 info-box">
-                <div >Call Us</div>
-                <p>2519123456</p>
+             <h2>Call Us</h2>
+               <p>+2519123456</p>
             </div>
             
             <div class="col-md-4 info-box">
-                <div >Visit Us</div>
+                <h3>Visit Us</h3>
                 <p>Mon-Sat </p>
             </div>
         </div>
@@ -76,9 +76,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h6>Contact Us</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum voluptatibus inventore nesciunt vero
-                    voluptatum dolore praesentium eveniet dolor voluptatem autem, natus quae corrupti aliquid illo
-                    sapiente magnam eos facilis asperiores!</p>
+                <p></p>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -117,9 +115,10 @@
             </div>
 
         </div>
-
+              <button type="button" class="succes mb-5">Get in touch</button>
         </form>
     </div>
+
 
     <!-- FOOTER -->
   <footer id="main-footer" class="bg-gradient">
