--- a/contact.html
+++ b/contact.html
@@ -2,129 +2,137 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-green text- white">
-        <div class="container">
-            <a href="index.html" class="navbar-brand text-white">ZHI YU</a>
-            <div class="collapse navbar-collapse" id="navbarcollapse">
-                <ui class="navbar-nav ml-auto text-white">
-                    <li class="nav-item">
-                        <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="howit_works.html" class="nav-link">How it works</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="service_area.html" class="nav-link">Service area</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="faq.html" class="nav-link">Faq</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="Blog.html" class="nav-link">Blogs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="blog-detail.html" class="nav-link">Blog Detail</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="about-us.html" class="nav-link">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact Us</a>
-                    </li>
-                </ui>
-            </div>
-            </button>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-sm bg-green text- white">
     <div class="container">
-        <div class="row pt-5 text-dark">
-
-            <div class="col-md-4 info-box">
-                <h1 >location</h1>semen mazgaja
-                <p>danu mall first floor </p>
-            </div>
-            
-            <div class="col-md-4 info-box">
-             <h2>Call Us</h2>
-               <p>+2519123456</p>
-            </div>
-            
-            <div class="col-md-4 info-box">
-                <h3>Visit Us</h3>
-                <p>Mon-Sat </p>
-            </div>
-        </div>
+      <a href="index.html" class="navbar-brand text-white">ZHI YU</a>
+      <div class="collapse navbar-collapse" id="navbarcollapse">
+        <ui class="navbar-nav ml-auto text-white">
+          <li class="nav-item">
+            <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
+          </li>
+          <li class="nav-item">
+            <a href="howit_works.html" class="nav-link">How it works</a>
+          </li>
+          <li class="nav-item">
+            <a href="service_area.html" class="nav-link">Service area</a>
+          </li>
+          <li class="nav-item">
+            <a href="faq.html" class="nav-link">Faq</a>
+          </li>
+          <li class="nav-item">
+            <a href="Blog.html" class="nav-link">Blogs</a>
+          </li>
+          <li class="nav-item">
+            <a href="blog-detail.html" class="nav-link">Blog Detail</a>
+          </li>
+          <li class="nav-item">
+            <a href="about-us.html" class="nav-link">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact Us</a>
+          </li>
+        </ui>
+      </div>
+      </button>
     </div>
+  </nav>
+  <div class="container">
+    <div class="row pt-5 text-dark">
+
+      <div class="col-md-4 info-box">
+        <h1>location</h1>semen mazgaja
+        <p>danu mall first floor </p>
+      </div>
+
+      <div class="col-md-4 info-box">
+        <h2>Call Us</h2>
+        <p>+2519123456</p>
+      </div>
+
+      <div class="col-md-4 info-box">
+        <h3>Visit Us</h3>
+        <p>Mon-Sat </p>
+      </div>
+
+    </div>
+  </div>
+  </div>
 
 
-    <div class="container text-dark pt-5">
+
+  <div class="container text-dark pt-5">
+    <div class="row">
+      <div class="col-md-6">
+        <h6>Contact Us</h6>
+        <p></p>
         <div class="row">
-            <div class="col-md-6">
-                <h6>Contact Us</h6>
-                <p></p>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">First name</label>
-                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="First name">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="Lastname">Last name</label>
-                            <input type="text" class="form-control" placeholder="Last name">
-                        </div>
-
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="phone">phone</label>
-                            <input type="number" class="form-control" placeholder="phone">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="Email">Email</label>
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <label for="Message mb-1">Message</label>
-                            <textarea class="form-control" id="message" required style="height: 120px"></textarea>
-                        </div>
-                    </div>
-
-                </div>
-
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="exampleInputPassword1">First name</label>
+              <input type="text" class="form-control " id="exampleInputPassword1" placeholder="First name">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="Lastname">Last name</label>
+              <input type="text" class="form-control" placeholder="Last name">
             </div>
 
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="phone">phone</label>
+              <input type="number" class="form-control" placeholder="phone">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="Email">Email</label>
+              <input type="text" class="form-control" placeholder="Email">
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="Message mb-1">Message</label>
+              <textarea class="form-control" id="message" required style="height: 120px"></textarea>
+            </div>
+          </div>
+
         </div>
-              <button type="button" class="succes mb-5">Get in touch</button>
-        </form>
+
+      </div>
+      <div class="col-md-6 ">
+        <img
+          src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fEhFQUxUSFklMjBNRUFMJTIwSU1BR0V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+          alt="healthy.meal-3" class="w-75 img-fluid mb-3 mb-5">
+
+
+      </div>
     </div>
+    <button type="button" class="succes mb-5 bg-primary-color text-light">Get in touch</button>
 
+  </div>
 
-    <!-- FOOTER -->
+  <!-- FOOTER -->
   <footer id="main-footer" class="bg-gradient">
     <div class="container">
       <div class="row">
-      <div class="col-md-4 text-center p-5 ">
+        <div class="col-md-4 text-center p-5 ">
           <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
             "Your personal Nutritionist"
           </p>
@@ -152,7 +160,7 @@
   </footer>
 
   <!-- CONTACT MODAL -->
-  <div class="modal fade text-light"  id="contact_modal">
+  <div class="modal fade text-light" id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
@@ -162,7 +170,7 @@
           </button>
         </div>
         <div class="modal-body bg-green">
-          <div class="row"> 
+          <div class="row">
             <div class="col-md-6">
               <div class="form-group">
                 <label for="name">Name</label>
@@ -192,16 +200,22 @@
   </div>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getfullyear());
 
     // init Scrollspy
-    $('body').scrollspy({ target: 'main-nav'});
-</script>
+    $('body').scrollspy({ target: 'main-nav' });
+  </script>
 </body>
 
 </html>
