--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 
       </div>
     </div>
-    <button type="button" class="succes mb-5 bg-primary-color text-light">Get in touch</button>
+    <button type="button" class="succes mb-5 bg-primary-color text-light p-3">Get in touch</button>
 
   </div>
 
