--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
         </div>
 
       </div>
-      <div class="col-md-6 ">
+      <div class="col-md-6 pl-5">
         <img
           src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fEhFQUxUSFklMjBNRUFMJTIwSU1BR0V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
           alt="healthy.meal-3" class="w-75 img-fluid mb-3 mb-5">
