--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
+
 <body>
   <nav class="navbar navbar-expand-sm bg-green text- white">
     <div class="container">
@@ -51,6 +52,17 @@
       </button>
     </div>
   </nav>
+  <section class="page-header position-relative overflow-hidden ptb-30 bg-primary-header" style="background: url('../assets/img/page-header-bg.svg') no-repeat bottom left;">
+    <div class="container navbar">
+        <div class="row">
+            <div class=" col-md-12">
+                <h1 class="display-5 fw-bold text-dark">Contact Us</h1>
+            </div>
+        </div>
+        <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-warning right-5"></div>
+    </div>
+</section>
+
   <div class="container">
     <div class="row pt-5 text-dark">
 
@@ -72,7 +84,7 @@
     </div>
   </div>
   </div>
-
+</section>
 
 
   <div class="container text-dark pt-5">
