--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <div class="container navbar">
         <div class="row">
             <div class=" col-md-12">
-                <h1 class="display-5 fw-bold text-dark">Contact Us</h1>
+                <h1 class="display-5 fw-bold text-white">Contact Us</h1>
             </div>
         </div>
         <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-warning right-5"></div>
