--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
   <section class="page-header position-relative overflow-hidden ptb-30 bg-primary-header" style="background: url('../assets/img/page-header-bg.svg') no-repeat bottom left;">
-    <div class="container navbar">
+    <div class=" navbar">
         <div class="row">
             <div class=" col-md-12">
                 <h1 class="display-5 fw-bold text-white">Contact Us</h1>
@@ -68,7 +68,7 @@
 
       <div class="col-md-4 info-box">
         <h1>location</h1>semen mazgaja
-        <p>danu mall first floor </p>
+        <p>Danu mall first floor </p>
       </div>
 
       <div class="col-md-4 info-box">
