--- a/About-us.HTML
+++ b/About-us.HTML
@@ -53,8 +53,8 @@
   </nav>
   <div class="container">
     <div class="row pt-5 pb-5">
-    <div class="col-md-8">  
-       <section class="entry-content text-dark pt-" itemprop="articleBody">
+    <div class="col-md-8 text-dark">  
+       <section class="" itemprop="articleBody">
        <h2>Our Vision</h2>
        <p><strong><em>A Culture of Aging that is Life-Affirming, Satisfying, Humane and Meaningful</em></strong></p>
       <p>Pioneer Network supports models where elders live in open, diverse, caring communities. In-depth change in systems requires change in governmental policy and regulation; change in the individual’s and society’s attitudes toward aging and elders; change in elders’ attitudes towards themselves and their aging; and change in the attitudes and behavior of caregivers toward those for whom they care. We refer to this work as culture change. Our aim is nothing less than transforming the culture of aging in America.</p>
@@ -79,15 +79,8 @@
       <li>Recognize that culture change and transformation are not destinations but a journey, always a work in progress</li>
 
     </div>
-    <div class="col-md-4 pl-5 text-dark image.png">
-      <h2>Recent Posts</h2>
-      <ul class="list-group">
-        <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
-        <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
-        <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
-        <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
-        <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
-      </ul>
+    <div class="col-md-4 pl-5 text-dark ">
+<img src="https://images.unsplash.com/photo-1497215641119-bbe6d71ebaae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG51dHJpb25zJTIwb2ZmaWNlJTIwaW1hZ2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="feature image" class="img-fluid rounded-custom">
 
     </div>
   </div>
