--- a/contact.html
+++ b/contact.html
@@ -52,16 +52,16 @@
       </button>
     </div>
   </nav>
-  <section class="page-header position-relative overflow-hidden ptb-30 bg-primary-header" style="background: url('../assets/img/page-header-bg.svg') no-repeat bottom left;">
-    <div class=" navbar">
-        <div class="row">
-            <div class=" col-md-12">
-                <h1 class="display-5 fw-bold text-white">Contact Us</h1>
-            </div>
+  <section class="page-header position-relative overflow-hidden ptb-30 bg-primary-header"
+    style="background: url('../assets/img/page-header-bg.svg') no-repeat bottom left;">
+    <div class="navbar">
+      <div class="row">
+        <div class=" col-md-12">
+          <h1 class="display-5 fw-bold text-white">Contact Us</h1>
         </div>
-        <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-warning right-5"></div>
+      </div>
     </div>
-</section>
+  </section>
 
   <div class="container">
     <div class="row pt-5 text-dark">
@@ -84,7 +84,7 @@
     </div>
   </div>
   </div>
-</section>
+  </section>
 
 
   <div class="container text-dark pt-5">
