--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 
       </div>
     </div>
-    <button type="button" class="succes mb-5 bg-primary-color text-light p-3">Get in touch</button>
+  <button class="btn success mb-5 bg-primary-color text-light p-3" data-toggle="modal" data-target="#contact_modal">Get in touch</button>
 
   </div>
 
