--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="col-md-6">
-          <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
+          <img src="https://media.istockphoto.com/id/1316646389/photo/professional-female-dietologist-taking-the-medical-history-from-her-client-before-they-start.jpg?b=1&s=170667a&w=0&k=20&c=euCr-O76JoovF0l6DOawFad5_L7EeN39QcHx4gpSlYw=" alt="" class="img-fluid mb-3 rounded-circle">
 
       </div>
     </div>
